--- a/Desaf(001)/Index.html
+++ b/Desaf(001)/Index.html
@@ -54,8 +54,50 @@
                 Pra piorar a linguagem<br>
                 O emoticom é um risco<br>
                 Tem símbolo para tudo<br>
+                Ponto e vírgula e um asterisco<br>
+                Um beijo significa<br>
+                Pra entender como fica<br>
+                Decifre esse rabisco.<br>
+            </p>
+
+            <article id="img2">
+                <article id="texto">
+                    <p>
+                        Tenho saudade das cartas<br>
+                        Escritas com a própria mão<br>
+                        Mandava no mês de Junho<br>
+                        Só chegava no Verão<br>
+                        Mas matava a saudade<br>
+                        Era texto de verdade<br>
+                        Nas linhas do coração.<br>
+                    </p>
+                </article>
+            </article>
+            <article>
+
+            <p>
+                Agora, escrevo e envio<br>
+                Chegando na mesma hora<br>
+                Mas quando vou prosear<br>
+                A pessoa foi embora<br>
+                Abriu outro aplicativo<br>
+                O mundo ficou cativo<br>
+                Da tecnologia do agora.<br>
+            </p>
+
+            <p>
+                Felizmente, pra orar<br>
+                Nâo precisa de internet<br>
+                Deus escuta todo mundo<br>
+                Se quiser, faça esse teste<br>
+                Dois pontos são dois joelhos<br>
+                Seus lábios são aparelhos<br>
+                Deixe que Deus interprete.<br>
             </p>
         </article>
     </main>
+    <footer>
+        <p>Site criado por Gustavo Guanabara para o CursoemVideo</p>
+    </footer>
 </body>
 </html>
