--- a/Desaf(001)/Index.html
+++ b/Desaf(001)/Index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <strong>Milton Duarte</strong></p>
+        <p>Por <strong><a href="https://www.recantodasletras.com.br/poesias/3186743" target="blank_">Milton Duarte</a></strong></p>
         <nav>
 
         </nav>
@@ -97,7 +97,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo</p>
+        <p>Site criado por <strong>Gustavo Guanabara</strong> para o <strong>CursoemVideo</strong></p>
     </footer>
 </body>
 </html>
