--- a/Desaf(001)/Index.html
+++ b/Desaf(001)/Index.html
@@ -60,20 +60,22 @@
                 Decifre esse rabisco.<br>
             </p>
 
-            <article id="img2">
-                <article id="texto">
-                    <p>
-                        Tenho saudade das cartas<br>
-                        Escritas com a própria mão<br>
-                        Mandava no mês de Junho<br>
-                        Só chegava no Verão<br>
-                        Mas matava a saudade<br>
-                        Era texto de verdade<br>
-                        Nas linhas do coração.<br>
-                    </p>
+            <article class="sombra">
+                <article id="img2">
+                    <article id="texto">
+                        <p>
+                            Tenho saudade das cartas<br>
+                            Escritas com a própria mão<br>
+                            Mandava no mês de Junho<br>
+                            Só chegava no Verão<br>
+                            Mas matava a saudade<br>
+                            Era texto de verdade<br>
+                            Nas linhas do coração.<br>
+                        </p>
+                    </article>
                 </article>
+                <article>
             </article>
-            <article>
 
             <p>
                 Agora, escrevo e envio<br>
